8362171: C2 fails with unexpected node in SuperWord truncation: ModI

Reviewed-by: thartmann, chagedorn