src/hotspot/share/opto/superword.cpp
@@ -2581,6 +2581,7 @@ static bool can_subword_truncate(Node* in, const Type* type) {
   switch (opc) {
   case Op_AbsI:
   case Op_DivI:
+  case Op_ModI:
   case Op_MinI:
   case Op_MaxI:
   case Op_CMoveI:
